epserde/tests/fail/force_full_on_item.stderr
error: expected "zero_copy", "deep_copy", or "bound"
  --> tests/fail/force_full_on_item.rs:14:11
   |
14 | #[epserde(force_full)]
   |           ^^^^^^^^^^
